2008-02-08  Sven Herzberg  <sven@imendio.com>

	* data/monkey-bubble.glade: remove the old vbox (it's not used
	anymore)
	* src/ui/ui-main.c: (ui_main_new): don't replace the old vbox, just
	create the new one; don't load the glade UI for Maemo

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): replace the glade-generated vbox by
	a manually created one (for Maemo, too)

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): replace the glade-generated vbox by
	a manually created one (for GNOME)

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* data/monkey-bubble.glade: dropped the menu bar from the glade file
	* src/ui/ui-main.c: (ui_main_new): don't hide the menubar anymore,
	it's gone (Maemo); don't destroy() the menubar anymore, it's gone (for
	GNOME)

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (ui_main_enabled_games_item),
	(ui_main_game_changed): use a menu bar generated by GtkUIManager, not
	by glade

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* data/monkey-bubble.glade: dropped the unused game menu

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (ui_main_enabled_games_item): use
	the generated menu

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): fix the last commit

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (game_pause_cb),
	(game_resume_cb), (pause_game): added callbacks for the new GtkActions

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): added a "Game" action to work
	around bug http://bugzilla.gnome.org/show_bug.cgi?id=515017

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): set the state of the game-related
	items earlier

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): set the accelerator paths for the
	GtkActions properly
